[gd_scene load_steps=6 format=3 uid="uid://cc6mfpfv1cnw7"]

[ext_resource type="Script" path="res://Scripts/Gadgets/GrindBoots.gd" id="1_qeflw"]
[ext_resource type="Curve" uid="uid://5fggr785a6bl" path="res://Scripts/Gadgets/GrindJumpCurve.tres" id="2_ykxcd"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8pcjv"]
height = 0.2

[sub_resource type="CylinderShape3D" id="CylinderShape3D_1voed"]
height = 3.0
radius = 1.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_8e3ri"]
height = 3.0
radius = 1.0

[node name="GrindBoots" type="Node3D" groups=["gadget", "passive"]]
script = ExtResource("1_qeflw")
grind_jump_curve = ExtResource("2_ykxcd")

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
shape = SubResource("CylinderShape3D_8pcjv")
max_results = 4
collision_mask = 128

[node name="GrindEndCooldown" type="Timer" parent="."]

[node name="ShapeCast3DLeft" type="ShapeCast3D" parent="."]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -1.48429, -0.767848, 0)
enabled = false
shape = SubResource("CylinderShape3D_1voed")
max_results = 4
collision_mask = 128

[node name="ShapeCast3DRight" type="ShapeCast3D" parent="."]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 1.5653, -0.742876, 0)
enabled = false
shape = SubResource("CylinderShape3D_8e3ri")
max_results = 4
collision_mask = 128

[connection signal="timeout" from="GrindEndCooldown" to="." method="_on_grind_end_cooldown_timeout"]
